--- a/index-START.html
+++ b/index-START.html
@@ -18,7 +18,7 @@
     <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="https://source.unsplash.com/Xy2GcIfewf0/1600x1000" class="image">
 
   <style>
 
@@ -37,6 +37,10 @@
 
     .controls {
       margin-bottom: 50px;
+    }
+
+    .image {
+      width: 80%;
     }
 
     input {
