--- a/index-START.html
+++ b/index-START.html
@@ -21,7 +21,21 @@
   <img src="https://source.unsplash.com/Xy2GcIfewf0/1600x1000" class="image">
 
   <style>
+    :root {
+      --base: #ffc600;
+      --spacing: 10px;
+      --blur: 10px;
+    }
 
+    img {
+      padding: var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+    }
+
+    h1 {
+      color: var(--base);
+    }
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -49,6 +63,7 @@
   </style>
 
   <script>
+    const inputs = document.querySelectorAll('.controls input');
   </script>
 
 </body>
